# video-walker

./: .gitignore  Cargo.toml  weather.db
backend/: Cargo.toml
backend/src/: database.rs  main.rs  mutex_box.rs  walker.rs
frontend/: package.json  vite.config.mts
frontend/src/bindings/: index.ts
frontend/src/components/: HelloWorld.vue
frontend/src/layouts/default/: AppBar.vue
frontend/src/plugins/: vuetify.ts
frontend/src/store/: app.ts
frontend/src/styles/: settings.scss
src/: lib.rs  setup_data.rs  video.rs
