[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.79"
async-recursion = "1.0.5"
futures-util = "0.3.30"
r2d2 = "0.8"
r2d2_sqlite = "0.23.0"
rand = "0.8.5"
rusqlite = "0.30.0"
serde = "1.0.196"
tokio = { version = "1.36.0", features = ["fs"] }
video-walker={path = ".."}
